--- a/Flexbox/index.html
+++ b/Flexbox/index.html
@@ -9,7 +9,7 @@
 <body>
     <header></header>
     <h1>justify-content: space-between</h1>
-    <section>        
+    <section class="space-between">        
         <div class="flexContainer">
             <button class="flexItem"> <p>1</p> </button>
             <button class="flexItem"> <p>2</p> </button>            
@@ -18,21 +18,20 @@
     </section>
 
     <h1>flex-direction: row-reverse</h1>
-    <section>
-        
-        <div class="flexContainer2">
-            <button class="flexItem2"> <p>1</p> </button>
-            <button class="flexItem2"> <p>2</p> </button>            
-            <button class="flexItem2"> <p>3</p> </button>
+    <section class="row-reverse">        
+        <div class="flexContainer">
+            <button class="flexItem"> <p>1</p> </button>
+            <button class="flexItem"> <p>2</p> </button>            
+            <button class="flexItem"> <p>3</p> </button>
         </div>
     </section>
 
     <h1>flex-direction: Column-reverse</h1>
-    <section>        
-        <div class="flexContainer3">
-            <button class="flexItem3"> <p>1</p> </button>
-            <button class="flexItem3"> <p>2</p> </button>            
-            <button class="flexItem3"> <p>3</p> </button>
+    <section class="Column-reverse">        
+        <div class="flexContainer">
+            <button class="flexItem"> <p>1</p> </button>
+            <button class="flexItem"> <p>2</p> </button>            
+            <button class="flexItem"> <p>3</p> </button>
         </div>
     </section>
 </body>
