--- a/Flexbox/index.html
+++ b/Flexbox/index.html
@@ -17,7 +17,23 @@
         </div>
     </section>
 
+    <h1>justify-content: space-around</h1>
+    <section class="space-around">        
+        <div class="flexContainer">
+            <button class="flexItem"> <p>1</p> </button>
+            <button class="flexItem"> <p>2</p> </button>            
+            <button class="flexItem"> <p>3</p> </button>
+        </div>
+    </section>
 
+    <h1>justify-content: space-evenly</h1>
+    <section class="space-evenly">        
+        <div class="flexContainer">
+            <button class="flexItem"> <p>1</p> </button>
+            <button class="flexItem"> <p>2</p> </button>            
+            <button class="flexItem"> <p>3</p> </button>
+        </div>
+    </section>
 
     <h1>flex-direction: row-reverse</h1>
     <section class="row-reverse">        
