--- a/Flexbox/index.html
+++ b/Flexbox/index.html
@@ -35,6 +35,37 @@
         </div>
     </section>
 
+    <h1>justify-content: flex-start</h1>
+    <section class="flex-start">        
+        <div class="flexContainer">
+            <button class="flexItem"> <p>1</p> </button>
+            <button class="flexItem"> <p>2</p> </button>            
+            <button class="flexItem"> <p>3</p> </button>
+        </div>
+    </section>
+
+    <h1>justify-content: flex-end</h1>
+    <section class="flex-end">        
+        <div class="flexContainer">
+            <button class="flexItem"> <p>1</p> </button>
+            <button class="flexItem"> <p>2</p> </button>            
+            <button class="flexItem"> <p>3</p> </button>
+        </div>
+    </section>
+
+    <h1>justify-content: center</h1>
+    <section class="center">        
+        <div class="flexContainer">
+            <button class="flexItem"> <p>1</p> </button>
+            <button class="flexItem"> <p>2</p> </button>            
+            <button class="flexItem"> <p>3</p> </button>
+        </div>
+    </section>
+
+    <section>
+        <hr>
+    </section>
+
     <h1>flex-direction: row-reverse</h1>
     <section class="row-reverse">        
         <div class="flexContainer">
