<feat/style>[flex-wrap/flex-flow]: nowrap, wrap, wrap-reverse e flax-Flow adicionados

--- a/Flexbox/index.html
+++ b/Flexbox/index.html
@@ -83,5 +83,69 @@
             <button class="flexItem"> <p>3</p> </button>
         </div>
     </section>
+
+    <section><hr></section>
+
+    <h1>flex-Wrap: nowrap</h1>
+    <section class="nowrap">        
+        <div class="flexContainer">
+            <button class="flexItem"> <p>1</p> </button>
+            <button class="flexItem"> <p>2</p> </button>            
+            <button class="flexItem"> <p>3</p> </button>
+            <button class="flexItem"> <p>4</p> </button>
+            <button class="flexItem"> <p>5</p> </button>
+            <button class="flexItem"> <p>6</p> </button>
+            <button class="flexItem"> <p>7</p> </button>
+            <button class="flexItem"> <p>8</p> </button>
+        </div>
+    </section>
+
+    <h1>flex-Wrap: wrap</h1>
+    <section class="wrap">        
+        <div class="flexContainer">
+            <button class="flexItem"> <p>1</p> </button>
+            <button class="flexItem"> <p>2</p> </button>            
+            <button class="flexItem"> <p>3</p> </button>
+            <button class="flexItem"> <p>4</p> </button>
+            <button class="flexItem"> <p>5</p> </button>
+            <button class="flexItem"> <p>6</p> </button>
+            <button class="flexItem"> <p>7</p> </button>
+        </div>
+    </section>
+
+    <h1>flex-Wrap: wrap-reverse</h1>
+    <section class="wrap-reverse">        
+        <div class="flexContainer">
+            <button class="flexItem"> <p>1</p> </button>
+            <button class="flexItem"> <p>2</p> </button>            
+            <button class="flexItem"> <p>3</p> </button>
+            <button class="flexItem"> <p>4</p> </button>
+            <button class="flexItem"> <p>5</p> </button>
+            <button class="flexItem"> <p>6</p> </button>
+            <button class="flexItem"> <p>7</p> </button>
+            <button class="flexItem"> <p>8</p> </button>
+            <button class="flexItem"> <p>9</p> </button>            
+            <button class="flexItem"> <p>10</p> </button>
+            <button class="flexItem"> <p>11</p> </button>
+            <button class="flexItem"> <p>12</p> </button>
+            <button class="flexItem"> <p>13</p> </button>
+            <button class="flexItem"> <p>14</p> </button>
+        </div>
+    </section>
+
+    <section><hr></section>
+
+    <h1>flex-flow: column | row | wrap | nowrap | unset | initial | inherit </h1>
+    <p class="description">Uma união de varias propriedades juntas, que  define o eixo principal e tranasvesal do contêiner flexível.(column, row, wrap, nowrap, etc.)</p>
+    <section class="column-wrap">        
+        <div class="flexContainer">
+            <button class="flexItem"> <p>1</p> </button>
+            <button class="flexItem"> <p>2</p> </button>            
+            <button class="flexItem"> <p>3</p> </button>
+            <button class="flexItem"> <p>4</p> </button>
+            <button class="flexItem"> <p>5</p> </button>
+        </div>
+    </section>
+
 </body>
 </html>
