--- a/Flexbox/index.html
+++ b/Flexbox/index.html
@@ -137,8 +137,65 @@
 
     <h1>flex-flow: column | row | wrap | nowrap | unset | initial | inherit </h1>
     <p class="description">Uma união de varias propriedades juntas, que  define o eixo principal e tranasvesal do contêiner flexível.(column, row, wrap, nowrap, etc.)</p>
-    <section class="column-wrap">        
+    <section class="flex-flow">        
         <div class="flexContainer">
+            <button class="flexItem"> <p>1</p> </button>
+            <button class="flexItem"> <p>2</p> </button>            
+            <button class="flexItem"> <p>3</p> </button>
+            <button class="flexItem"> <p>4</p> </button>
+            <button class="flexItem"> <p>5</p> </button>
+        </div>
+    </section>
+
+    <section><hr></section>
+
+    <h1>align-itens: flex-start</h1>
+    <section class="flex-start">        
+        <div class= "align-itens flexContainer">
+            <button class="flexItem"> <p>1</p> </button>
+            <button class="flexItem"> <p>2</p> </button>            
+            <button class="flexItem"> <p>3</p> </button>
+            <button class="flexItem"> <p>4</p> </button>
+            <button class="flexItem"> <p>5</p> </button>
+        </div>
+    </section>
+
+    <h1>align-itens: flex-end</h1>
+    <section class="flex-end">        
+        <div class= " flexContainer">
+            <button class="flexItem"> <p>1</p> </button>
+            <button class="flexItem"> <p>2</p> </button>            
+            <button class="flexItem"> <p>3</p> </button>
+            <button class="flexItem"> <p>4</p> </button>
+            <button class="flexItem"> <p>5</p> </button>
+        </div>
+    </section>
+
+    <h1>align-itens: center</h1>
+    <section class="align-itens-center">        
+        <div class= "flexContainer">
+            <button class="flexItem"> <p>1</p> </button>
+            <button class="flexItem"> <p>2</p> </button>            
+            <button class="flexItem"> <p>3</p> </button>
+            <button class="flexItem"> <p>4</p> </button>
+            <button class="flexItem"> <p>5</p> </button>
+        </div>
+    </section>
+
+    <h1>align-itens: stretch</h1>
+    <section class="stretch">        
+        <div class= "flexContainer">
+            <button class="flexItem"> <p>1</p> </button>
+            <button class="flexItem"> <p>2</p> </button>            
+            <button class="flexItem"> <p>3</p> </button>
+            <button class="flexItem"> <p>4</p> </button>
+            <button class="flexItem"> <p>5</p> </button>
+        </div>
+    </section>
+
+    <h1>align-itens: baseline</h1>
+    <section class="baseline">        
+        <div class= "flexContainer">
             <button class="flexItem"> <p>1</p> </button>
             <button class="flexItem"> <p>2</p> </button>            
             <button class="flexItem"> <p>3</p> </button>
