--- a/Flexbox/index.html
+++ b/Flexbox/index.html
@@ -162,7 +162,7 @@
 
     <h1>align-itens: flex-end</h1>
     <section class="flex-end">        
-        <div class= " flexContainer">
+        <div class= "align-itens flexContainer">
             <button class="flexItem"> <p>1</p> </button>
             <button class="flexItem"> <p>2</p> </button>            
             <button class="flexItem"> <p>3</p> </button>
@@ -173,7 +173,7 @@
 
     <h1>align-itens: center</h1>
     <section class="align-itens-center">        
-        <div class= "flexContainer">
+        <div class= "align-itens flexContainer">
             <button class="flexItem"> <p>1</p> </button>
             <button class="flexItem"> <p>2</p> </button>            
             <button class="flexItem"> <p>3</p> </button>
@@ -184,7 +184,7 @@
 
     <h1>align-itens: stretch</h1>
     <section class="stretch">        
-        <div class= "flexContainer">
+        <div class= "align-itens flexContainer">
             <button class="flexItem"> <p>1</p> </button>
             <button class="flexItem"> <p>2</p> </button>            
             <button class="flexItem"> <p>3</p> </button>
@@ -195,7 +195,7 @@
 
     <h1>align-itens: baseline</h1>
     <section class="baseline">        
-        <div class= "flexContainer">
+        <div class= "align-itens flexContainer">
             <button class="flexItem"> <p>1</p> </button>
             <button class="flexItem"> <p>2</p> </button>            
             <button class="flexItem"> <p>3</p> </button>
